// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemRating /> should render with props 1`] = `
<ItemRating
  reviewsCount={3}
  value={2}
>
  <Box
    alignItems="center"
    direction="row"
    display="flex"
    marginTop={0}
  >
    <div
      className="display-flex direction-row align-items-center M-t__0"
    >
      <Rating
        value={2}
      >
        <div
          className="root"
          data-rating={2}
          data-testid="rating"
        >
          <Star
            key="0"
            type="full"
          >
            <div
              className="star size-s"
            >
              <ForwardRef(SvgStar)
                className="svg full"
              >
                <svg
                  className="svg full"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.304 2.318a.75.75 0 011.392 0l2.567 6.393 6.874.466a.75.75 0 01.43 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L12 18.754l-5.835 3.663A.75.75 0 015.04 21.6l1.681-6.68L1.433 10.5a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                  />
                </svg>
              </ForwardRef(SvgStar)>
            </div>
          </Star>
          <Star
            key="1"
            type="full"
          >
            <div
              className="star size-s"
            >
              <ForwardRef(SvgStar)
                className="svg full"
              >
                <svg
                  className="svg full"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.304 2.318a.75.75 0 011.392 0l2.567 6.393 6.874.466a.75.75 0 01.43 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L12 18.754l-5.835 3.663A.75.75 0 015.04 21.6l1.681-6.68L1.433 10.5a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                  />
                </svg>
              </ForwardRef(SvgStar)>
            </div>
          </Star>
          <Star
            key="2"
            type="empty"
          >
            <div
              className="star size-s"
            >
              <ForwardRef(SvgStar)
                className="svg"
              >
                <svg
                  className="svg"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.304 2.318a.75.75 0 011.392 0l2.567 6.393 6.874.466a.75.75 0 01.43 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L12 18.754l-5.835 3.663A.75.75 0 015.04 21.6l1.681-6.68L1.433 10.5a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                  />
                </svg>
              </ForwardRef(SvgStar)>
            </div>
          </Star>
          <Star
            key="3"
            type="empty"
          >
            <div
              className="star size-s"
            >
              <ForwardRef(SvgStar)
                className="svg"
              >
                <svg
                  className="svg"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.304 2.318a.75.75 0 011.392 0l2.567 6.393 6.874.466a.75.75 0 01.43 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L12 18.754l-5.835 3.663A.75.75 0 015.04 21.6l1.681-6.68L1.433 10.5a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                  />
                </svg>
              </ForwardRef(SvgStar)>
            </div>
          </Star>
          <Star
            key="4"
            type="empty"
          >
            <div
              className="star size-s"
            >
              <ForwardRef(SvgStar)
                className="svg"
              >
                <svg
                  className="svg"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.304 2.318a.75.75 0 011.392 0l2.567 6.393 6.874.466a.75.75 0 01.43 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L12 18.754l-5.835 3.663A.75.75 0 015.04 21.6l1.681-6.68L1.433 10.5a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                  />
                </svg>
              </ForwardRef(SvgStar)>
            </div>
          </Star>
        </div>
      </Rating>
      <Box
        dangerouslySetInlineStyle={
          Object {
            "__style": Object {
              "paddingBottom": "2px",
            },
          }
        }
        marginLeft={2}
      >
        <div
          className="M-l__2"
          style={
            Object {
              "paddingBottom": "2px",
            }
          }
        >
          <ForwardRef(Text)
            color="gray38"
            size={12}
          >
            <span
              className="size-12 line-height-16 color__gray38"
            >
              3
            </span>
          </ForwardRef(Text)>
        </div>
      </Box>
    </div>
  </Box>
</ItemRating>
`;

exports[`<ItemRating /> should render without props 1`] = `
<ItemRating>
  <Box
    alignItems="center"
    direction="row"
    display="flex"
    marginTop={0}
  >
    <div
      className="display-flex direction-row align-items-center M-t__0"
    >
      <Rating
        value={0}
      >
        <div
          className="root"
          data-rating={0}
          data-testid="rating"
        >
          <Star
            key="0"
            type="empty"
          >
            <div
              className="star size-s"
            >
              <ForwardRef(SvgStar)
                className="svg"
              >
                <svg
                  className="svg"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.304 2.318a.75.75 0 011.392 0l2.567 6.393 6.874.466a.75.75 0 01.43 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L12 18.754l-5.835 3.663A.75.75 0 015.04 21.6l1.681-6.68L1.433 10.5a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                  />
                </svg>
              </ForwardRef(SvgStar)>
            </div>
          </Star>
          <Star
            key="1"
            type="empty"
          >
            <div
              className="star size-s"
            >
              <ForwardRef(SvgStar)
                className="svg"
              >
                <svg
                  className="svg"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.304 2.318a.75.75 0 011.392 0l2.567 6.393 6.874.466a.75.75 0 01.43 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L12 18.754l-5.835 3.663A.75.75 0 015.04 21.6l1.681-6.68L1.433 10.5a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                  />
                </svg>
              </ForwardRef(SvgStar)>
            </div>
          </Star>
          <Star
            key="2"
            type="empty"
          >
            <div
              className="star size-s"
            >
              <ForwardRef(SvgStar)
                className="svg"
              >
                <svg
                  className="svg"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.304 2.318a.75.75 0 011.392 0l2.567 6.393 6.874.466a.75.75 0 01.43 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L12 18.754l-5.835 3.663A.75.75 0 015.04 21.6l1.681-6.68L1.433 10.5a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                  />
                </svg>
              </ForwardRef(SvgStar)>
            </div>
          </Star>
          <Star
            key="3"
            type="empty"
          >
            <div
              className="star size-s"
            >
              <ForwardRef(SvgStar)
                className="svg"
              >
                <svg
                  className="svg"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.304 2.318a.75.75 0 011.392 0l2.567 6.393 6.874.466a.75.75 0 01.43 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L12 18.754l-5.835 3.663A.75.75 0 015.04 21.6l1.681-6.68L1.433 10.5a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                  />
                </svg>
              </ForwardRef(SvgStar)>
            </div>
          </Star>
          <Star
            key="4"
            type="empty"
          >
            <div
              className="star size-s"
            >
              <ForwardRef(SvgStar)
                className="svg"
              >
                <svg
                  className="svg"
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.304 2.318a.75.75 0 011.392 0l2.567 6.393 6.874.466a.75.75 0 01.43 1.324l-5.287 4.417 1.68 6.681a.75.75 0 01-1.125.818L12 18.754l-5.835 3.663A.75.75 0 015.04 21.6l1.681-6.68L1.433 10.5a.75.75 0 01.43-1.324l6.874-.466 2.567-6.393z"
                  />
                </svg>
              </ForwardRef(SvgStar)>
            </div>
          </Star>
        </div>
      </Rating>
    </div>
  </Box>
</ItemRating>
`;
